<resources>
    <string name="app_name">AHDCamera</string>
    <string name="app_version">V1.1.0</string>
    <string name="start">Start</string>
    <string name="pre_set">Parameter Settings Preview :</string>
    <string name="csi0_res">Resolution</string>
    <string name="csi1_res">CSI1 Resolution</string>
    <string name="pre_num">Preview Number</string>
    <string name="CSI_channel">CSI Channels</string>
    <string name="debug_pri">Debug Print</string>
    <string name="func_pre_select">Function preselection :</string>
    <string name="record_para_set">Video Parameter Setting :</string>
    <string name="res">Resolution</string>
    <string name="rec_num">Number of Videos</string>
    <string name="enc_form">Encoding Format</string>
    <string name="main_rate">Main Rate</string>
    <string name="file_form">File Format</string>
    <string name="sub_rate">Subcode Rate</string>
    <string name="rec_sub_rate">Video Sub-stream Resolution</string>
    <string name="seg">Segment</string>
    <string name="audio">Audio</string>
    <string name="merage_rec_set">Four-in-one Way to Parameter Settings :</string>
    <string name="csi_channel">CSI Channels</string>
    <string name="photo">Photograph</string>
    <string name="start_rec">Start Recording</string>
    <string name="record_video">Record Video</string>
    <string name="lock_video">Lock the Video</string>
    <string name="video_mir">Mirror Video</string>
    <string name="mute">Mute</string>
    <string name="open_mute">Turn on audio</string>
    <string name="channel">Channel</string>
    <string name="recording">Recording</string>
    <string name="click_stop">Click to stop recording</string>
    <string name="setings">Settings</string>
    <string name="show_type">Hardware version : </string>
    <string name="camera_type">Camera type</string>
    <string name="sdcard_disable">SD card is not available</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="switch_default">Switch Camera</string>
    <string name="start_dms">DMS</string>
    <string name="stop_dms">Stop DMS</string>
    <string name="start_adas">ADAS</string>
    <string name="stop_adas">Stop ADAS</string>
    <string name="start_bsd">Start BSD</string>
    <string name="stop_bsd">Stop BSD</string>
    <string name="adas_disable">ADAS is not available！</string>
    <string name="dms_disable">DMS is not available！</string>
    <string name="bsd_disable">BSD is not available！</string>
    <string name="init_detect_err">Failed to initialize detection function !</string>
    <string name="dms_ctrl">DMS control:</string>
    <string name="dms_switch">DMS switch</string>
    <string name="dms_open_speed">DMS opening speed</string>
    <string name="dms_open_speed_out">DMS opening speed setting exceeds the range of 0~200!</string>
    <string name="dms_open_speed_failed">Failed to set DMS start speed!</string>
    <string name="dms_driver_identity_switch">Driver identification switch</string>
    <string name="dms_identity_check_interval">Identity check interval </string>
    <string name="dms_identity_check_interval_out">Identity verification interval is out of range 0~600 </string>
    <string name="dms_identity_entry">Identity Entry Management </string>
    <string name="dms_entry_complete">Entry completed</string>
    <string name="dms_identity_entry_faile">Identity entry failed! </string>
    <string name="smoke_warn_switch">Smoking warning switch </string>
    <string name="phone_warn_switch">On the phone warning switch </string>
    <string name="yawn_warn_switch">Yawn warning switch </string>
    <string name="departure_warn_switch">Departure seat warning switch</string>
    <string name="camera_block_warn_switch">Camera block warning switch</string>
    <string name="abnormal_driver_warn_switch">Driver abnormality warning switch</string>
    <string name="wear_block_sun_warn_switch">Wear blocking sunglasses warning switch</string>
    <string name="mouth_block_warn_switch">Mouth block warning switch</string>
    <string name="eyes_close_warn_switch">Eyes closed warning switch</string>
    <string name="distracted_left_warn_switch">Distracted driving (look left) warning switch</string>
    <string name="distracted_right_warn_switch">Distracted driving (look right) warning switch</string>
    <string name="distracted_up_warn_switch">Distracted driving (look up) warning switch</string>
    <string name="distracted_down_warn_switch">Distracted driving (look down) warning switch</string>
    <string name="dms_load_conf_err">DMS import configuration failed !</string>
    <string name="dms_cum_time">Cumulative warning time</string>
    <string name="dms_interval_next_time">Interval for the next warning time</string>
    <string name="dms_cum_time_out">Cumulative warning time is out of range 0~20</string>
    <string name="dms_interval_next_time_out">The interval for the next warning is out of range 0~30 </string>
    <string name="dms_face_error">Please enter the face information first!</string>
    <string name="dms_verity_face_faile">Failed to verify face!</string>
    <string name="identity_title">FACE ENTRY MANAGEMENT</string>
    <string name="identity_attention_title">Attention!</string>
    <string name="identity_delete_conform">Are you sure you want to delete </string>
    <string name="identity_name_null_warn">Face information name cannot be empty!</string>
    <string name="identity_rename_error">File renaming error!</string>
    <string name="identity_delete_error">File deletion error !</string>
    <string name="identity_conform_enter_face">Confirm to enter this picture? </string>
    <string name="identity_verity_face_null">The image cannot recognize the face data, please re-enter!</string>
    <string name="identity_image_file_data_error">Failed to read the image file data, please re-enter! </string>
    <string name="speed_display_ctrl">Speed display control:</string>
    <string name="speed_mode">Speed mode</string>
    <string name="sim_speed">Simulation speed </string>
    <string name="open_speed">Opening speed </string>
    <string name="second_warn_open_speed">Threshold for opening speed of secondary warning </string>
    <string name="read_conf_err">Failed to read configuration !</string>
    <string name="write_conf_err">Failed to write configuration  !</string>
    <string name="sim_speed_out">Simulation speed is out of range 0~200 !</string>
    <string name="second_warn_open_speed_out">The opening speed threshold of the secondary warning exceeds the range of 0~250!</string>
    <string name="cal_com">Calibration complete</string>

    <string name="adas_para_config">ADAS Calibration Parameter</string>
    <string name="bsd_para_config">BSD Calibration Parameter</string>
    <string name="car_len">Car length, unit mm</string>
    <string name="car_width">Vehicle width (the distance between the outer sides of the two tires), unit mm </string>
    <string name="ref_center">The distance between the camera and the reference center of the vehicle (looking out from the cab, positive left and negative right), unit mm </string>
    <string name="ref_top">Distance from camera to front bumper, unit mm </string>
    <string name="dis_len_tyre">The distance between the lens and the front tire, unit mm, the front of the lens is positive </string>
    <string name="camera_height">The height of the camera from the ground, unit mm </string>
    <string name="camera_focus">Camera focal length, unit mm </string>
    <string name="camera_dx">Sensor size (image plane discretization coefficient, CMOS unit cell size, unit mm) </string>
    <string name="cal_point_xy">Calibration point coordinates (x,y)</string>
    <string name="cal_point_start">Start calibration</string>
    <string name="blank_warn">The above parameters cannot be left blank!</string>
    <string name="adas_cal_warn">ADAS calibration failed, please re-calibrate!</string>
    <string name="bsd_cal_warn">BSD calibration failed, please re-calibrate!</string>
    <string name="point_warn">Please set the calibration coordinates !</string>
    <string name="point_out_warn">The calibration coordinates are out of range (322,182)~(950,530), please reset the calibration point!</string>
    <string name="car_len_warn">The length of the vehicle exceeds the range of 2000~10000!</string>
    <string name="car_width_warn">The vehicle width exceeds the range of 1200~3000!</string>
    <string name="ref_center_warn">The distance between the camera and the center of the vehicle exceeds the range of 0~600!</string>
    <string name="ref_top_warn">The distance between the camera and the front bumper exceeds the range of 0~3000!</string>
    <string name="dis_len_tyre_warn">The distance between the lens and the front tire exceeds the range of -2000~2000!</string>
    <string name="camera_height_warn">The height of the camera to the ground exceeds the range of 0~3000!</string>
    <string name="camera_focus_warn">The focal length of the camera exceeds the range of 0~100!</string>
    <string name="camera_dx_warn">The camera sensor size exceeds the range of 0~10!</string>
    <string name="calibration">calibration</string>
    <string name="bsd_first_warn_d">BSD first level alarm distance (unit: mm)</string>
    <string name="bsd_second_warn_d">BSD second level alarm distance (unit: mm)</string>
    <string name="bsd_third_warn_d">BSD third level alarm distance (unit: mm)</string>
    <string name="bsd_front_warn_d">Alarm distance in front of BSD (unit: mm)</string>
    <string name="bsd_first_warn_t">BSD level 1 alarm distance is out of range 0~3000</string>
    <string name="bsd_second_warn_t">BSD secondary alarm distance is out of range 0~6000 </string>
    <string name="bsd_third_warn_t">BSD level 3 alarm distance is out of range 0~9000 </string>
    <string name="bsd_front_warn_t">The alarm distance in front of the BSD exceeds the range 0~15000 </string>

    <string name="gps_confirm">The system GPS location service is not turned on, now go to turn it on? </string>

    <string name="adas_ctrl">ADAS control:</string>
    <string name="adas_switch">ADAS switch</string>
    <string name="dep_warn_switch">Lane departure warning switch</string>
    <string name="dep_warn_interval">Lane departure warning interval</string>
    <string name="gpio_switch">Turn signal input switch </string>
    <string name="front_col_warn_switch">Front collision warning switch </string>
    <string name="distance_warn_switch">Vehicle distance monitoring warning switch </string>
    <string name="hmw_open_thres">HMW headway time threshold</string>
    <string name="ttc_thres">FCW collision time threshold </string>
    <string name="hmw_warn_interval">HMW warning interval</string>
    <string name="fcw_warn_interval">FCW warning interval</string>

    <string name="ldw_speed_out">Lane departure warning opening speed is out of range 0~200 !</string>
    <string name="fcw_speed_out">Front collision warning opening speed is out of range 0~200 !</string>
    <string name="hmw_speed_out">Vehicle distance monitoring warning opening speed is out of range 0~200 !</string>
    <string name="hmw_open_thres_out">HMW headway time threshold exceeds the range of 0~4 !</string>
    <string name="ttc_thres_out">FCW collision time threshold exceeds the range of 0~5</string>
    <string name="hmw_warn_interval_out">HMW warning interval time exceeds the range of 0~20 !</string>
    <string name="fcw_warn_interval_out">FCW warning interval time exceeds the range of 0~20 !</string>
    <string name="dep_warn_interval_out">Lane departure warning interval time exceeds the range of 0~20 !</string>

    <string name="adas_load_conf_err">ADAS import configuration failed !</string>

</resources>
