<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/adas_detect"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="270dp"
            android:onClick="adasDetect"
            android:text="@string/start_adas" />
        <Button
            android:id="@+id/dms_detect"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="225dp"
            android:onClick="dmsDetect"
            android:text="@string/start_dms" />
        <Button
            android:id="@+id/bsd_detect"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="180dp"
            android:onClick="bsdDetect"
            android:text="@string/start_bsd" />
        <Button
            android:id="@+id/takePic"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="135dp"
            android:onClick="startTakePic"
            android:text="@string/photo" />

        <Button
            android:id="@+id/startLockVideo"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="90dp"
            android:onClick="startLockVideo"
            android:text="@string/lock_video" />

        <Button
            android:id="@+id/settings"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="45dp"
            android:onClick="setActivity"
            android:text="@string/setings" />

        <Button
            android:id="@+id/switch_default"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:onClick="setSwitch"
            android:text="@string/switch_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <FrameLayout
                    android:id="@+id/container1_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/container1_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1">

                <FrameLayout
                    android:id="@+id/container1_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.00">

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/container1_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"></FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:visibility="gone">

                <FrameLayout
                    android:id="@+id/container2_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.00">

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/container2_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:visibility="gone">

                <FrameLayout
                    android:id="@+id/container2_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></FrameLayout>

                <FrameLayout
                    android:id="@+id/container2_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/collisionButton"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:layout_gravity="right"
                        android:onClick="startCollision"
                        android:text="模拟碰撞"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
